[package]
name = "engel_builder"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/elementary-engine/engel"

[dependencies]
engel_core = { path = "../core" }